--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.28.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "redux-logger": "^3.0.6",
     "rimraf": "^2.6.0",
     "style-loader": "^0.17.0",
     "webpack": "^2.2.0",
@@ -49,6 +50,9 @@
     "material-ui": "^0.18.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-redux": "^5.0.5",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
