--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "babel-eslint": "^7.1.1",
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
-    "material-ui": "^0.18.0",
+    "material-ui": "^0.18.1",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.5",
